fixed nav spacing

--- a/src/pages/landing/Landing.css
+++ b/src/pages/landing/Landing.css
@@ -78,6 +78,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
     width: 30px;
     height: 3%;
     top: 2%;
-    /* left: 2%; */
+    left: 10px;
   }
 }
